--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -1,5 +1,5 @@
 <div style="padding:15px 15px 10px 15px;">
-    <div><strong>Detail</strong></div>
+    <div><strong>Class Detail</strong></div>
 </div>
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <alert></alert>
