--- a/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
+++ b/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
@@ -5,7 +5,7 @@
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
     <div #container [ngClass]="{'disableDiv': UserId!=0}" style="padding: 15px;" fxLayout="row wrap">
-        <div style="height:350px;width: 100%;">
+        <!-- <div style="height:350px;width: 100%;"> -->
             <form [formGroup]="searchForm">
                 <mat-form-field class="example-full-width" appearance="outline" [style.width.px]="250">
                     <mat-label>Name</mat-label>
@@ -20,7 +20,7 @@
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
-            <mat-table #table [dataSource]="datasource">
+            <mat-table #table [dataSource]="datasource" matSort>
                 <ng-container matColumnDef="ApplicationUserId">
                     <mat-header-cell *matHeaderCellDef> User Id</mat-header-cell>
                     <mat-cell *matCellDef="let element">
@@ -31,7 +31,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="UserName">
-                    <mat-header-cell *matHeaderCellDef> User </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> User </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
                             <input matInput [value]="element.UserName" [(ngModel)]="element.UserName" autocomplete="Off"
@@ -40,7 +40,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="EmailAddress">
-                    <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.EmailAddress}}
                     </mat-cell>
@@ -55,7 +55,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ValidFrom">
-                    <mat-header-cell *matHeaderCellDef> Valid From </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Valid From </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
                             <input matInput [value]="element.ValidFrom" [matDatepicker]="ValidFrom"
@@ -66,7 +66,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ValidTo">
-                    <mat-header-cell *matHeaderCellDef> Valid To </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Valid To </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
                             <input matInput [value]="element.ValidTo" [matDatepicker]="ValidTo"
@@ -86,15 +86,15 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
+                    <mat-cell *matCellDef="let element">
                         <button [disabled]="loading || Permission=='read'" mat-mini-fab (click)="UpdateOrSave(element)">
-                            <mat-icon matTooltip="view">save</mat-icon>
+                            <mat-icon matTooltip="save">save</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;" style="display:flex; align-items: baseline;"></mat-row>
             </mat-table>
+            <mat-paginator [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
         </div>
     </div>
-</div>
