--- a/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.scss
+++ b/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.scss
@@ -2,24 +2,24 @@
 //  box-shadow: 5px 10px grey;
 // }
 .mat-form-field{
-    margin-right: 10px;
+    margin-right: 15px;
     width: 98%;
 }
 button{
     padding:5px;
 }  
  .mat-column-ApplicationUserId{
-   flex:0 0 70px;
+   flex:1 1 70px;
 }
-.mat-column-Active{
+.mat-column-Active,.mat-column-Action{
     justify-content: center;
-    flex:0 0 100px
+    flex:1 1 100px
 }
-.mat-column-ValidFrom,.mat-column-ValidTo{
-    flex:0 0 140px;
+.mat-column-ValidFrom,.mat-column-ValidTo,.mat-column-ContactNo{
+    flex:1 1 140px;
 }
 .mat-column-UserName,.mat-column-EmailAddress{
-    flex:0 0 250px;
+    flex:1 1 250px;
 }
 // .mat-column-Active,.mat-column-UserName,.mat-column-EmailAddress,.mat-column-ContactNo,.mat-column-ValidFrom,.mat-column-ValidTo{
 //     margin-right: 15px;
