register confirm email pending

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -30,7 +30,7 @@
                     <a [routerLink]="['/auth/forgot']">Forgot password</a>
                 </div>
                 <div style="margin: 15px 15px 15px 0px;">
-                    New User? <a [routerLink]="['/auth/register']">Sign up here</a>
+                    New user? <a [routerLink]="['/auth/signup']">Sign up</a>
                 </div>                
                 <div *ngIf="f.username.invalid && (f.username.dirty || f.username.touched)" class="alert alert-danger">
 
