--- a/src/app/modules/globaladmininitial/plans/plans.component.html
+++ b/src/app/modules/globaladmininitial/plans/plans.component.html
@@ -21,6 +21,7 @@
                         <mat-form-field appearance="outline">
                             <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
                                 [value]="element.Title" [maxlength]="50" [(ngModel)]="element.Title">
+
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -29,8 +30,8 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="255"
-                                [value]="element.Description" [(ngModel)]="element.Description">
+                            <textarea matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="1000"
+                                [value]="element.Description" [(ngModel)]="element.Description"></textarea>
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
